<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="mod">%</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="log">Log</string>
    <string name="ln">Ln</string>
    <string name="sqrt">Sqrt</string>
    <string name="square">x^2</string>
    <string name="power">x^n</string>
    <string name="hide">▲</string>
    <string name="option">OPTION</string>
    <string name="arrow">-- Arrow</string>
    <string name="author">Developed by Masrik Dahir</string>


    <string name="ok">OK</string>
    <string name="menu_about">About…</string>
    <string name="menu_clipboard_copied">Copied to clipboard.</string>
    <string name="show_hide_units">Show/hide units…</string>
    <string name="copy_value">Copy value</string>
    <string name="copy_row">Copy row</string>

    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_0">0</string>
    <string name="str_pad_point">.</string>
    <string name="str_pad_clear">C</string>
    <string name="str_pad_negate">±</string>
    <string name="str_pad_back">←</string>

    <string name="launcher_title">Universal Calculator</string>
    <string name="widget_title">Convert Units</string>
    <string name="about_message">ConvertMe — An easy-to-use unit conversion utility.\n\nCopyright © 2010–2021 Defiant Technologies, LLC.\n\Created by Dmitry Brant.</string>

    <string name="configure_widget">Configure widget</string>
    <string name="unit_category">Unit category:</string>
    <string name="unit_from">Unit to convert from:</string>
    <string name="unit_to">Unit to convert to:</string>
    <string name="unit_increment">Increment amount:</string>

    <string name="custom_units">Custom units</string>
    <string name="add_new_unit">Add new unit…</string>
    <string name="add_button">Add</string>
    <string name="done_button">Done</string>
    <string name="delete_unit">Delete unit</string>
    <string name="edit_unit">Edit unit</string>
    <string name="preview">Preview</string>
    <string name="inverse">Inverse</string>
    <string name="nice_try">Nice try!</string>
    <string name="delete_unit_confirm">Are you sure you want to delete \"%s\"?</string>
    <string name="delete_unit_dependent">\"%s\" cannot be deleted because other units depend on it (%s).</string>
    <string name="custom_unit_name">Name of unit</string>
    <string name="custom_unit_name_invalid">Invalid name (must be non-empty)</string>
    <string name="custom_unit_base">Base unit:</string>
    <string name="custom_unit_multiplier">Multiplier</string>
    <string name="custom_unit_multiplier_invalid">Invalid multiplier (must be a nonzero decimal number)</string>
    <string name="custom_unit_multiplier_default">1.0</string>

</resources>
